@@ -5,4 +5,4 @@ Processing module test58 (test_input/test58.py)...
 
 Warnings...
 
-test58:1: NOT PROCESSED UNABLE TO IMPORT
+test_input/test58.py:1: NOT PROCESSED UNABLE TO IMPORT
