@@ -8,4 +8,4 @@ Processing module test77 (test_input/test77.py)...
 
 Warnings...
 
-test77:1: NOT PROCESSED UNABLE TO IMPORT
+test_input/test77.py:1: NOT PROCESSED UNABLE TO IMPORT
