@@ -5,4 +5,4 @@ Processing module test8 (test_input/test8.py)...
 
 Warnings...
 
-test8:1: NOT PROCESSED UNABLE TO IMPORT
+test_input/test8.py:1: NOT PROCESSED UNABLE TO IMPORT
