@@ -8,4 +8,4 @@ Processing module test89 (test_input/test89.py)...
 
 Warnings...
 
-test89:1: NOT PROCESSED UNABLE TO IMPORT
+test_input/test89.py:1: NOT PROCESSED UNABLE TO IMPORT
