@@ -1,5 +1,16 @@
 2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* pychecker/checker.py:
+	  Make output of NOT PROCESSED UNABLE TO IMPORT report filename
+	  similarly to other warnings.
+	* test_expected/test58-2.3:
+	* test_expected/test77:
+	* test_expected/test8:
+	* test_expected/test89:
+	  Adjust expected output to match.
+
+2011-01-06  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* pychecker/warn.py:
 	  Add debug output to list number of modules and number of
 	  warnings found.
